# django

./: .gitignore  .my_pgpass  .pg_service.conf  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml  start.sh
account/: apps.py  authentication.py  forms.py  models.py  urls.py  views.py
account/migrations/: 0001_initial.py  0002_profile_styles.py  0003_alter_profile_styles.py  0004_contact.py
account/static/css/: account.css  base.css
account/static/js/: account.js
account/templates/: base.html
account/templates/account/: base.html  dashboard.html  edit.html  register.html  register_done.html
account/templates/registration/: logged_out.html  login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html
account/templatetags/: account_tags.py
actions/: apps.py  models.py  utils.py
actions/migrations/: 0001_initial.py  0002_alter_action_verb.py
app/: celery.py  settings.py  urls.py
blog/: admin.py  apps.py  feeds.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_post_created_alter_post_publish_and_more.py  0003_alter_post_created_alter_post_publish_and_more.py  0004_comment.py  0005_alter_comment_options_post_tags_alter_comment_name.py  0006_trigram_ext.py
blog/static/css/: blog.css
blog/templates/: pagination.html
blog/templates/blog/: base.html
blog/templatetags/: blog_tags.py
cart/: cart.py  forms.py  urls.py  views.py
cart/static/css/: cart.css
cart/templates/cart/: detail.html
coupons/: apps.py  forms.py  models.py  urls.py  views.py
coupons/migrations/: 0001_initial.py
images/: apps.py  forms.py  models.py  urls.py  views.py
images/migrations/: 0001_initial.py  0002_image_total_likes_and_more.py
images/static/css/: bookmarklet.css  images.css
images/static/js/: bookmarklet.js  images.js
images/templates/images/: base.html  bookmarklet_launcher.js
nginx/: Dockerfile  production.conf
notifications/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
notifications/migrations/: 0001_initial.py
orders/: admin.py  apps.py  context_processors.py  models.py  tasks.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_order_stripe_id.py  0003_order_coupon_order_discount.py
payment/: tasks.py  urls.py  views.py  webhooks.py
shop/: apps.py  models.py  recommender.py  urls.py  views.py
shop/migrations/: 0001_initial.py
static/css/: app.css
static/js/: main.js
templates/: base.html
(+40 files in other folders)
