[project]
name = "app"
version = "0.1.0"
description = "Simple app"
authors = [
    {name = "Nikita",email = "nyuskov@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "django (>=5.2.7,<6.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "psycopg2 (>=2.9.11,<3.0.0)",
    "django-stubs[compatible-mypy] (>=5.2.7,<6.0.0)",
    "python-decouple (>=3.8,<4.0)",
    "pip-system-certs (>=5.3,<6.0)",
    "certifi (>=2025.10.5,<2026.0.0)",
    "django-taggit (>=6.1.0,<7.0.0)",
    "markdown (>=3.9,<4.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "uvicorn-worker (>=0.4.0,<0.5.0)",
    "pillow (>=12.0.0,<13.0.0)",
    "social-auth-app-django (>=5.6.0,<6.0.0)",
    "django-extensions (>=4.1,<5.0)",
    "werkzeug (>=3.1.3,<4.0.0)",
    "pyopenssl (>=25.3.0,<26.0.0)",
    "cryptography (>=46.0.3,<47.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "python-slugify (>=8.0.4,<9.0.0)",
    "easy-thumbnails (>=2.10.1,<3.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "reportlab (>=4.4.4,<5.0.0)",
    "redis (>=7.0.1,<8.0.0)",
    "celery (>=5.5.3,<6.0.0)",
    "flower (>=2.0.1,<3.0.0)",
    "stripe (>=13.1.2,<14.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^6.0.0"

